--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuedraggable": "^2.15.0",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
